# engvis

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
crates/engvis-core/: Cargo.toml
crates/engvis-core/src/: aabb.rs  annotation.rs  bourke_table.rs  camera.rs  input.rs  lib.rs  light.rs  marching_cubes.rs  material.rs  math.rs  mesh.rs  scene.rs  topology.rs
crates/engvis-mesher/: Cargo.toml
crates/engvis-mesher/src/: lib.rs
crates/engvis-renderer/: Cargo.toml
crates/engvis-renderer/src/: app.rs  custom_material.rs  depth.rs  egui_integration.rs  event.rs  gltf_loader.rs  gpu.rs  grid_renderer.rs  lib.rs  lighting.rs  material_pipeline.rs  mesh_renderer.rs  overlay_renderer.rs  postprocess.rs  renderer.rs  scene_callback.rs  texture_cache.rs  wireframe_renderer.rs
crates/engvis-surface/: Cargo.toml
crates/engvis-surface/src/: lib.rs
crates/engvis-surface/tests/: tpms_tests.rs
doc/: camera-quaternion-orbit.tex  gyroid-boundary-smoothing.tex  gyroid-bounding-wireframe.tex  gyroid-sphere-clip-and-lighting.tex  mc33-domain-auto-scale.tex  mesh-winding-fix.tex  tpms-shell-skeletal-generation.tex  ui-shell-and-mesh-io.tex
examples/: hello_viewer.rs  shell_diag.rs
examples/colorbar3d/: Cargo.toml
examples/colorbar3d/src/: main.rs
fidget-demo/: Cargo.toml
fidget-demo/src/: main.rs
formulas/: generate_svgs.sh
formulas/src/: morph-minimal.typ  morph-shell.typ  morph-skeletal.typ  morph-template.typ  template.typ
src/: formula_cache.rs  main.rs  mesh_io.rs
