[package]
name = "engvis"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Engineering visualization framework with GPU rendering"
repository = "https://github.com/nil-is-lin/engvis"
readme = "README.md"

[dependencies]
engvis-core = { path = "crates/engvis-core" }
engvis-renderer = { path = "crates/engvis-renderer" }
engvis-surface = { path = "crates/engvis-surface" }
engvis-mesher = { path = "crates/engvis-mesher" }
wgpu.workspace = true
winit.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
pollster.workspace = true
log.workspace = true
env_logger.workspace = true
glam.workspace = true
fidget-core.workspace = true
fidget-jit.workspace = true
fidget-mesh.workspace = true
fidget-rhai.workspace = true
tobj.workspace = true
stl_io.workspace = true
ply-rs-bw.workspace = true
rfd.workspace = true
earcutr = "0.4"
resvg = "0.47"

[workspace]
resolver = "2"
members = [
    "crates/engvis-core",
    "crates/engvis-renderer",
    "crates/engvis-surface",
    "crates/engvis-mesher",
    "fidget-demo", "examples/colorbar3d",
]

[workspace.package]
version = "0.1.5"
edition = "2024"
authors = ["nil"]
license = "MIT"

[workspace.dependencies]
bytemuck = { version = "1.25", features = ["derive"] }
glam = { version = "0.30", features = ["bytemuck"] }
wgpu = "27.0"
winit = "0.30"
egui = "0.33"
egui-wgpu = "0.33"
egui-winit = "0.33"
pollster = "0.4"
log = "0.4"
env_logger = "0.11"
gltf = "1.4"
image = "0.25"
fidget-core = "0.4.3"
fidget-jit = "0.4.3"
fidget-mesh = "0.4.3"
fidget-rhai = "0.4.3"
tobj = "4.0"
stl_io = "0.8"
ply-rs-bw = "2.0"
rfd = "0.15"
rayon = "1.10"
meshopt = "0.6.2"
splines = { version = "4.4", features = ["glam"] }
