[package]
name = "fidget-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
engvis-core = { path = "../crates/engvis-core" }
engvis-renderer = { path = "../crates/engvis-renderer" }
fidget-core.workspace = true
fidget-mesh.workspace = true
winit.workspace = true
egui.workspace = true
log.workspace = true
env_logger.workspace = true
glam.workspace = true
pollster = "0.4"
