[package]
name = "engvis-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core data types for engineering visualization"
keywords = ["3d", "visualization", "wgpu", "pbr", "engineering"]
categories = ["graphics", "rendering"]
homepage = "https://github.com/nil-is-lin/engvis"
repository = "https://github.com/nil-is-lin/engvis"

[dependencies]
glam.workspace = true
bytemuck.workspace = true
rayon.workspace = true
rustc-hash = "2"
