[package]
name = "engvis-renderer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GPU rendering for engineering visualization"

[dependencies]
engvis-core = "0.1.0"
glam.workspace = true
bytemuck.workspace = true
wgpu.workspace = true
winit.workspace = true
egui.workspace = true
egui-wgpu.workspace = true
egui-winit.workspace = true
pollster.workspace = true
log.workspace = true
gltf.workspace = true
image.workspace = true
